--- a/public/404.html
+++ b/public/404.html
@@ -23,6 +23,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script type="text/javascript">
+      window.location.href = window.location.origin + "/notFound";
+    </script>
     <title>Cocktails</title>
   </head>
   <body>
