404 fix error II

--- a/public/404.html
+++ b/public/404.html
@@ -1,4 +1,24 @@
 <!DOCTYPE html>
+<html lang="en-US">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      http-equiv="refresh"
+      content="0; url=https://elegant-elion-b18521.netlify.app"
+    />
+    <script type="text/javascript">
+      window.location.href = window.location.origin + "/notFound";
+    </script>
+    <title>Page Redirection</title>
+  </head>
+
+  <body>
+    If you are not redirected automatically, follow this
+    <a href="hhttps://elegant-elion-b18521.netlify.app/">link</a>.
+  </body>
+</html>
+
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
