--- a/public/404.html
+++ b/public/404.html
@@ -7,7 +7,7 @@
       content="0; url=https://elegant-elion-b18521.netlify.app"
     />
     <script type="text/javascript">
-      window.location.href = window.location.origin + "/notFound";
+      window.location.href = window.location.origin + "/error";
     </script>
     <title>Page Redirection</title>
   </head>
