fix error text error

--- a/public/404.html
+++ b/public/404.html
@@ -27,7 +27,7 @@
           <img class="image" src="not-found.JPG"></img>
         </div>
         <h2>404 - Page not found</h2>
-        <p>The page you are looking doesn't exist.</p>
+        <p>The page you are looking for doesn't exist.</p>
         <a href="https://findcocktails.netlify.app/">home page</a>
       </div>
     </div>
